[project]
name = ""
version = "1.0"
description = "Kaggle - Learn Data Visualization (https://www.kaggle.com/learn/data-visualization)"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.12"

dependencies = [
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "streamlit>=1.28.2",
]

[tool.pdm.dev-dependencies]
dev = [
    "jupyterlab>=4.0.9",
    "streamlit-jupyter>=0.2.1",
    "ruff>=0.1.6",
]

[tool.ruff]
line-length = 100

