[project]
name = ""
version = "1.0"
description = "Kaggle - Learn Data Visualization (https://www.kaggle.com/learn/data-visualization)"
license = {text = "CC-BY-SA-4.0"}
readme = "README.md"
authors = [
    {name = "Bruno Oliveira", email = "bruno.ariev@gmail.com"},
]

requires-python = ">=3.10,<3.13"

dependencies = [
    "pandas>=2.2.3,<3.0",
    "numpy>=2.1.3,<3.0",
    "seaborn>=0.13.2,<1.0",
    "plotly>=5.24.1,<6.0",
    "statsmodels>=0.14.4,<1.0",
    "streamlit>=1.40.1,<2.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.0",
    "ruff>=0.7.3"
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]