[project]
name = "kaggle-data-vis"
version = "1.0"
description = "Kaggle - Learn Data Visualization (https://www.kaggle.com/learn/data-visualization)"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "pandas>=2.2.3,<3.0",
    "numpy>=2.2.2,<3.0",
    "streamlit>=1.41.1,<2.0",
    "plotly>=5.24.1,<6.0",
    "seaborn>=0.13.2,<1.0",
    "statsmodels>=0.14.4,<1.0",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.4",
    "ruff>=0.9.2"
]

[tool.ruff]
line-length = 100
lint.select = ["F", "E", "W", "I001"]